--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,24 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>feedburner-pinger</groupId>
+    <groupId>com.tenfactorial.web.feeds</groupId>
     <artifactId>feedburner-pinger</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
+    <name>FeedBurner Ping Client</name>
+    <description>A client to ping FeedBurner</description>
+    <url>http://github.com/clementi/feedburner-pinger-java</url>
+
+    <licenses>
+        <license>
+            <name>MIT</name>
+            <url>http://opensource.org/licenses/MIT</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <scm>http://github.com/clementi/feedburner-pinger-java</scm>
 
     <dependencies>
         <dependency>
