--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         </license>
     </licenses>
 
-    <scm>http://github.com/clementi/feedburner-pinger-java</scm>
+<!--    <scm>http://github.com/clementi/feedburner-pinger-java</scm>-->
 
     <dependencies>
         <dependency>
@@ -35,4 +35,18 @@
             <version>2.3.1</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.2</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
