--- a/.gitignore
+++ b/.gitignore
@@ -45,11 +45,8 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 
-# Maven
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
+# Gradle
+.gradle
+build/
+gradle/
+gradlew*
