--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'java'
-apply plugin: 'maven'
 
 group = 'com.tenfactorial.web.feeds'
 version = '1.0.0'
@@ -9,13 +8,11 @@ description = """FeedBurner Ping Client"""
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
-
-
 repositories {
-        
-     maven { url "http://repo.maven.apache.org/maven2" }
+     jcenter()
 }
+
 dependencies {
-    compile group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.3.1'
-    compile group: 'com.google.code.gson', name: 'gson', version:'2.3.1'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.google.code.gson:gson:2.3.1'
 }
